--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Haskell common ignore
+
 dist
 dist-*
 cabal-dev
@@ -21,3 +23,7 @@ cabal.project.local
 cabal.project.local~
 .HTF/
 .ghc.environment.*
+
+# Exercism platform
+.exercism/
+*.code-workspace
